Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104526

text in TextArea disappear when scrolling up large text by using scrollbar button "up"

    XMLWordPrintable

Details

    • Windows
    • bc57835083 (qt/qtdeclarative/dev) b6d6d15ab8 (qt/qtdeclarative/6.4) b6d6d15ab8 (qt/tqtc-qtdeclarative/6.4) bc57835083 (qt/tqtc-qtdeclarative/dev) b6d6d15ab8 (qt/qtdeclarative/6.4.1)

    Description

      ScrollView
          {
              id: view        
              property alias text: editor.text
              height: root.height * 0.89 - 3.33
              width: root.width
      
              ScrollBar.vertical: ScrollBar
              {
                       parent: view
                       x: view.width - width
                       y: view.topPadding
                       height: view.availableHeight
                       policy: ScrollBar.AlwaysOn
                       stepSize: 0.02
              }
      
              ScrollBar.horizontal.policy: ScrollBar.AlwaysOn
              anchors.top: editorBtn.bottom
              anchors.left: editorBtn.left
              anchors.topMargin: 5
      
              TextArea
              {
                  id: editor
                  objectName: "textEditor"
                  font.pixelSize: 24
                  background: Rectangle{
                      color: "#D9D9D9"
                  }
              }
          }
      

      A short sample is in the attachment. To get it work need to copy file myHorse_1.nc into the build folder.

      Attachments

        1. 1.png
          1.png
          180 kB
        2. 2.png
          2.png
          6 kB
        3. TextAreaSample.zip
          35 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            vladimir_ Vladimir Alekseenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes